AGL-2959: Street View Toaster
aangepast: consistenter gebruik van Street View ipv Streetview.

--- a/src/lib/kaart/kaart.component.html
+++ b/src/lib/kaart/kaart.component.html
@@ -25,7 +25,7 @@
       <div class="kaart-interacties">
         <awv-kaart-achtergrond-selector class="kaart-achtergrond-selector" *ngIf="aanwezigeElementen.contains('Achtergrondkeuze')"></awv-kaart-achtergrond-selector>
         <div class="kaart-controls">
-          <awv-kaart-open-street-view *ngIf="aanwezigeElementen.contains('Streetview')"></awv-kaart-open-street-view>
+          <awv-kaart-open-street-view *ngIf="aanwezigeElementen.contains('StreetView')"></awv-kaart-open-street-view>
           <awv-kaart-meten *ngIf="aanwezigeElementen.contains('Meten')"></awv-kaart-meten>
           <awv-kaart-mijn-locatie></awv-kaart-mijn-locatie>
           <awv-kaart-zoom *ngIf="aanwezigeElementen.contains('Zoomknoppen')"></awv-kaart-zoom>
